# xxml-NoneBot

./: .env.dev  .gitignore  README.md  bot.py  main.py  pyproject.toml
xxml/plugins/ai/: chat.py
xxml/plugins/core/: echo.py
xxml/plugins/cron/: 今日头牌.py
xxml/plugins/utils/: poke_respond.py  tarot.py  吃啥.py
